--- a/Frontend/src/pages/applications/AppCard/index.scss
+++ b/Frontend/src/pages/applications/AppCard/index.scss
@@ -17,8 +17,8 @@
 
    
     .cardImg{
-        width: 450px;
-        height: 300px;
+        width: 100%;
+        height: 100%;
         @media (max-width:500px) {
            display: none; 
         }
@@ -26,8 +26,7 @@
     }
 
     .textCard{
-        width: 600px;
-     padding: 20px;
+     padding: 20px 0;
      @media (max-width:500px) {
          width: 100%;
      }
@@ -57,6 +56,7 @@
             font-size: 14px;
             font-style: normal;
             font-weight: 400;
+            text-align: justify;
             // line-height: 24px; /* 150% */
             letter-spacing: 0.7px;
             @media (max-width:500px) {
